Encrypting-Data-at-Rest-and-in-Transit/secure-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: secure-app-service
  namespace: default
spec:
  selector:
    app: secure-web-app
  ports:
  - name: https
    port: 443
    targetPort: 443
    protocol: TCP
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  type: ClusterIP
