Encrypting-Data-at-Rest-and-in-Transit/secure-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: secure-app-route
  namespace: default
spec:
  host: secure-app-salman-redhat.apps.cluster.local
  to:
    kind: Service
    name: secure-app-service
    weight: 100
  port:
    targetPort: https
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: Redirect
